--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "framework7": "^1.5.4",
     "framework7-vue": "^0.8.5",
-    "vue": "^2.2.4"
+    "vue": "^2.2.4",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
