--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "http://framework7.io/vue/",
   "dependencies": {
     "framework7": "^1.5.4",
+    "framework7-icons": "^0.8.9",
     "framework7-vue": "^0.8.5",
     "vue": "^2.2.4",
     "vuex": "^2.3.1"
