--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Framework7 Vue + Webpack starter app template",
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "server": "node server/www"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
   },
   "homepage": "http://framework7.io/vue/",
   "dependencies": {
+    "axios": "^0.16.1",
     "framework7": "^1.5.4",
     "framework7-icons": "^0.8.9",
     "framework7-vue": "^0.8.5",
@@ -42,29 +44,32 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "body-parser": "^1.17.2",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
+    "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
+    "morgan": "^1.8.1",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1"
