--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "http://framework7.io/vue/",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "axios": "^0.16.1",
     "framework7": "^1.5.4",
     "framework7-icons": "^0.8.9",
