--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.16.1",
+    "fastclick": "^1.0.6",
     "framework7": "^1.5.4",
     "framework7-icons": "^0.8.9",
     "framework7-vue": "^0.8.5",
