--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "animate.css": "^3.5.2",
     "axios": "^0.16.1",
     "fastclick": "^1.0.6",
+    "file-saver": "^1.3.3",
     "framework7": "^1.5.4",
     "framework7-icons": "^0.8.9",
     "framework7-vue": "^0.8.5",
     "vue": "^2.2.4",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "xlsx": "^0.10.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
