--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.16.1",
+    "echarts": "^3.6.2",
     "fastclick": "^1.0.6",
     "file-saver": "^1.3.3",
     "framework7": "^1.5.4",
